support redis cache token

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "debug": "^2.2.0",
+    "ioredis": "^2.4.0",
     "lodash": "^3.10.1",
     "urllib": "^2.4.0"
   },
